@@ -146,8 +146,7 @@ dc1394_is_color(dc1394color_coding_t color_coding, dc1394bool_t *is_color)
 }
 
 dc1394error_t
-dc1394_get_color_coding_depth(dc1394color_coding_t color_coding,
-    uint32_t * bits)
+dc1394_get_color_coding_depth(dc1394color_coding_t color_coding, uint32_t * bits)
 {
   switch(color_coding) {
   case DC1394_COLOR_CODING_MONO8:
@@ -163,6 +162,7 @@ dc1394_get_color_coding_depth(dc1394color_coding_t color_coding,
   case DC1394_COLOR_CODING_MONO16S:
   case DC1394_COLOR_CODING_RGB16S:
   case DC1394_COLOR_CODING_RAW16:
+    // shoudn't we return the real bit depth (e.g. 12) instead of systematically 16?
     *bits = 16;
     return DC1394_SUCCESS;
   }
@@ -170,29 +170,29 @@ dc1394_get_color_coding_depth(dc1394color_coding_t color_coding,
 }
 
 dc1394error_t
-dc1394_get_bytes_per_pixel(dc1394color_coding_t color_coding, float* bpp)
+dc1394_get_bits_per_pixel(dc1394color_coding_t color_coding, uint32_t* bits)
 {
   switch(color_coding) {
   case DC1394_COLOR_CODING_MONO8:
   case DC1394_COLOR_CODING_RAW8:
-    *bpp=1.0;
+    *bits=8;
     return DC1394_SUCCESS;
   case DC1394_COLOR_CODING_YUV411:
-    *bpp=1.5;
+    *bits=12;
     return DC1394_SUCCESS;
   case DC1394_COLOR_CODING_MONO16:
   case DC1394_COLOR_CODING_RAW16:
   case DC1394_COLOR_CODING_MONO16S:
   case DC1394_COLOR_CODING_YUV422:
-    *bpp=2.0;
+    *bits=16;
     return DC1394_SUCCESS;
   case DC1394_COLOR_CODING_YUV444:
   case DC1394_COLOR_CODING_RGB8:
-    *bpp=3.0;
+    *bits=24;
     return DC1394_SUCCESS;
   case DC1394_COLOR_CODING_RGB16:
   case DC1394_COLOR_CODING_RGB16S:
-    *bpp=6.0;
+    *bits=48;
     return DC1394_SUCCESS;
   }
   return DC1394_INVALID_COLOR_CODING;
