@@ -28,7 +28,7 @@ extern "C" {
 dc1394error_t dc1394_get_image_size_from_video_mode(dc1394camera_t *camera, uint32_t video_mode, uint32_t *width, uint32_t *height);
 dc1394error_t dc1394_framerate_as_float(dc1394framerate_t framerate_enum, float *framerate);
 dc1394error_t dc1394_get_color_coding_depth(dc1394color_coding_t color_coding, uint32_t * bits);
-dc1394error_t dc1394_get_bytes_per_pixel(dc1394color_coding_t color_coding, float* bpp);
+  dc1394error_t dc1394_get_bits_per_pixel(dc1394color_coding_t color_coding, uint32_t* bits);
 dc1394error_t dc1394_get_color_coding_from_video_mode(dc1394camera_t *camera, dc1394video_mode_t video_mode, dc1394color_coding_t *color_coding);
 dc1394error_t dc1394_is_color(dc1394color_coding_t color_mode, dc1394bool_t *is_color);
 dc1394bool_t dc1394_is_video_mode_scalable(dc1394video_mode_t video_mode);
